# realworld-django-ninja

./: .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  realworld_dummy_server.py  requirements.txt
.github/workflows/: lint.yml  test-cypress-api-docker.yml  test-cypress-api-postgresql.yml  test-cypress-api-sqlite.yml  test-django-postgresql.yml  test-django-sqlite.yml  test-hurl-docker.yml  test-hurl-postgresql.yml  test-hurl-sqlite.yml  test-postman-docker.yml  test-postman-postgresql.yml  test-postman-sqlite.yml  typing.yml
accounts/: api.py  apps.py  models.py  schemas.py  tests.py
accounts/management/commands/: createUser.py
accounts/migrations/: 0001_initial.py  0002_rename_name_user_username.py  0003_alter_user_username.py
apps/accounts/: api.py  schemas.py  tests.py
apps/accounts/migrations/: 0001_initial.py  0003_alter_user_username.py
apps/articles/: api.py  models.py  schemas.py  tests.py
apps/articles/migrations/: 0001_initial.py  0002_alter_article_updated.py  0003_replace_taggit_with_tags.py  0004_drop_taggit_tables.py
apps/comments/: api.py  schemas.py  tests.py
apps/comments/migrations/: 0001_initial.py
apps/image_server/: api.py  models.py  schemas.py  tests.py
articles/: admin.py  api.py  apps.py  filters.py  models.py  schemas.py  serializers.py  tests.py  urls.py  views.py
articles/migrations/: 0001_initial.py
comments/: api.py  apps.py  models.py  schemas.py  tests.py
comments/migrations/: 0001_initial.py
config/: asgi.py  settings.py  urls.py  wsgi.py
e2e-testing/cypress/: package.json
e2e-testing/cypress/src/e2e/: article.cy.ts  profile.cy.ts  tag.cy.ts  user.cy.ts
e2e-testing/cypress/src/support/: user.util.ts
e2e-testing/postman/: Conduit.postman_collection.json  LICENSE  openapi.yml  run-api-tests.sh
helpers/: auth.py  empty.py  exceptions.py  headered_client.py  jwt_utils.py
image_server/: api.py  apps.py  models.py  schemas.py  tests.py
legacy-e2e-testing/cypress/: LICENSE  cypress.config.js  tsconfig.json
legacy-e2e-testing/cypress/src/api/: article.cy.ts
legacy-e2e-testing/cypress/src/support/: types.ts  user.util.ts
